--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 0.0.5
+Done about.
+Set linux key bindings.
+Added copy/paste etc.
+Added edit menu.
+Added help menu.
+Added about etc.
 Code clean.
 
 0.0.1
