--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.1.0
+Added extra data to shm for the future.
 Clean up msg queues on exit with multi instance.
 Delete shared mem and msg queue on exit.
 Moved from QSharedMemory to normal linux shared memory ( qt screws with the key ).
