--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.1.0
+Fixed crash when using calculated key.
 Added extra data to shm for the future.
 Clean up msg queues on exit with multi instance.
 Delete shared mem and msg queue on exit.
