--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+0.1.1
+Set default theme to 'Linux' on 1st run.
+Sort theme names in prefs.
+Added confirm multiline paste to prefs ( 'Paste I Quotes' is considered to be one line ).
+Added blink cursor to prefs.
+Added version string to about.
+Redone prefs.
+Added prefs class.
+
 0.1.0
 Fixed crash when using calculated key.
 Added extra data to shm for the future.
