--- a/KKTerminalQT/resources/man/kkterminalqt.1
+++ b/KKTerminalQT/resources/man/kkterminalqt.1
@@ -1,19 +1,69 @@
-.\" kkterminalqt
-.TH "kkterminalqt" "1" "0.0.0" "K.D.Hedger" "User Commands"
+.TH "KKTERMINALQT" "1" "November 2024" "KKTerminalQT 0.1.1" "User Commands"
 .SH "NAME"
-kkterminalqt \- manual page for kkterminalqt 0.0.0
+KKTerminalQT - manual page for KKTerminalQT 0.1.1
+.br
+
 .SH "SYNOPSIS"
-.B kkterminalqt
-.SH "DESCRIPTION"
-A GUI programme.
+\fBkkterminalqt \fR[\fIoptions\fR]
+.br
 
+.SH "OPTIONS"
+\fB-h\fR, \fB--help\fR
+.br
+       Displays help on commandline options.
+.br
 
-.SH "EXAMPLES"
-.LP 
-	does somithing
-.IP 
-kkterminalqt
-.LP 
+\fB--help-all\fR
+.br
+       Displays help including Qt specific options.
+.br
 
-.SH "REPORTING BUGS"
-Report bugs to kdhedger@yahoo.co.uk
+\fB-v\fR, \fB--version\fR
+.br
+       Displays version information.
+.br
+
+\fB-k\fR, \fB--key \fR<KeyID>
+.br
+       Force key ID.
+.br
+
+\fB-m\fR, \fB--multi\fR
+.br
+       Force multiple instance.
+.br
+
+\fB-q\fR, \fB--quit\fR
+.br
+       Quit app.
+.br
+
+\fB-n\fR, \fB--new-tab \fR<ARG>
+.br
+       New tab in ARG.
+.br
+
+\fB-t\fR, \fB--tab\fR
+.br
+       New tab in PWD.
+.br
+
+\fB-c\fR, \fB--command \fR<ARG>
+.br
+       Execute ARG in new tab.
+.br
+
+.SH "AUTHORS"
+K. D. Hedger.
+.br
+
+Source:
+.br
+https://github.com/KeithDHedger/KKTerminalQT
+.br
+Contact details:
+.br
+https://keithdhedger.github.io
+.br
+keithdhedger@gmail.com
+.br
