--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.1.1
+Dont save window geometry on exit if '--qwindowgeometry' is set on command line.
 Set app default theme to gnome.
 Added RootColours theme.
 Added theme folder ( /usr/share/KKTerminalQT/themes ).
