--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 0.1.1
+Check for 'Shift' key when triggering snippits.
 Added snippets menu ( see "Help" menu ).
 Added sendetext to messages.
 Fixed starting up in same workspace after force quit ( kill -SIGKILL pid ).
